# port-libuv

./: .gitignore  README.md  all_cves.json  dependents.json  relevant_cves.json  test-original.sh  validator-report.md
.cargo/: config.toml
.github/workflows/: build-debs.yml
.plan/: workflow-run-base.txt  workflow-structure.yaml
.plan/phases/: 01-baseline-and-artifact-policy.md  01-validator-refresh-baseline.md  02-core-threading-parity.md  02-packaging-abi-fixes.md  03-core-loop-threading-fixes.md  03-io-fs-resolver-parity.md  04-fs-dns-process-fixes.md  04-process-signal-security.md  05-full-upstream-and-relink.md  05-network-io-fixes.md  06-catchall-final-report.md  06-packaging-and-dependent-image.md  07-dependent-closure-and-release-hardening.md
original/: CMakeLists.txt  Makefile.am
original/.pc/: applied-patches
original/src/: threadpool.c  uv-common.c
original/src/unix/: core.c  linux.c
original/test/: run-tests.c  test-fork.c  test-fs-event.c  test-fs-fd-hash.c  test-fs.c  test-idna-intercept.c  test-idna.c  test-queue-foreach-delete.c  test-strscpy.c  test-strtok.c
packaging/: package.env
safe/: .gitignore  CMakeLists.txt  COMPATIBILITY_NOTES.md  Cargo.toml  RELEASE_CHECKLIST.md  build.rs  libuv-static.pc.in  libuv.pc.in
safe/abi/: libuv.map  linux-exported-symbols.txt  linux-phase1-safe-runner-status.txt  linux-safe-regression-list.txt  linux-source-manifest.txt  linux-struct-sizes.txt  linux-symbol-ownership.toml  linux-targeted-static-test-outcomes.json  linux-test-list-static.txt  original-libuv-static.pc  original-libuv.pc  original-uv_run_benchmarks_a.link.txt  original-uv_run_benchmarks_a.objects.txt  original-uv_run_tests.link.txt  original-uv_run_tests.objects.txt  original-uv_run_tests_a.link.txt  original-uv_run_tests_a.objects.txt
safe/cmake/: libuvConfig.cmake.in
safe/debian/: changelog  control  libuv1-dev.install  libuv1t64.install  libuv1t64.symbols  rules
safe/legacy/: linux-manifest.toml  linux-transition-plan.toml
safe/perf/: benchmark-selection.txt  benchmark-thresholds.json  linux-benchmark-list.txt  original-linux-benchmark-baseline.json  regression-review.md
safe/scripts/: build_deb.sh  c_smoke_build.sh  capture_baseline.sh  compare_benchmarks.py  run_benchmark_suite.py  verify_baseline.sh  verify_benchmark_baseline.py  verify_link_compat.sh  verify_runtime_purity.py  verify_symbol_ownership.py  verify_targeted_runner_outcomes.py  verify_transition_plan.py
safe/src/: abi.rs  accessors.rs  allocator.rs  async.rs  dl.rs  dns.rs  error.rs  ffi_exports.rs  fs.rs  fs_event.rs  fs_poll.rs  handle.rs  idna.rs  inet.rs  legacy.rs  lib.rs  loop.rs  os.rs  phase5_private.rs  pipe.rs  poll.rs  private_support.rs  process.rs  process_title.rs  random.rs  request.rs  signal.rs  state.rs  stream.rs  strings.rs  stub.rs  tcp.rs  thread.rs  threadpool.rs  timer.rs  tty.rs  udp.rs  version.rs  watchers.rs
safe/src/abi/: linux_x86_64.rs  mod.rs
safe/src/core/: allocator.rs  default_loop.rs  error.rs  handle.rs  loop.rs  metrics.rs  mod.rs  queue.rs  request.rs  time.rs  timer.rs
safe/src/exports/: generated.rs  mod.rs
safe/src/linux/: epoll.rs  inotify.rs  socket.rs
safe/src/threading/: mod.rs  random.rs  sync.rs  thread.rs  threadpool.rs
safe/src/unix/: async.rs  dl.rs  epoll.rs  fd.rs  fork.rs  fs.rs  fs_event.rs  fs_poll.rs  getaddrinfo.rs  getnameinfo.rs  loop_watcher.rs  mod.rs  os.rs  pipe.rs  poll.rs  process.rs  process_title.rs  signal.rs  stream.rs  tcp.rs  tty.rs  udp.rs
safe/src/upstream_support/: atomics.rs  inet.rs  mod.rs  random_sysctl_linux.rs  shims.rs  timer.rs  unix_core.rs  unix_loop.rs  uv_common.rs
safe/src/util/: idna.rs  inet.rs
safe/test/: test-fs-fd-hash.c  test-getters-setters.c  test-list.h  test-public-api.c
safe/test-extra/: privdrop-wrap.c  regression-list.h  run-regressions.c  test-getaddrinfo-long-hostname.c  test-io-uring-privdrop.c  test-supplementary-groups-dropped.c
safe/tests/dependents/: manifest.json
safe/tests/dependents/probes/: gevent.sh  knot-resolver.sh
safe/tests/harness/: CMakeLists.txt  README.md  phase-test-list.h
safe/tests/regressions/: manifest.json  validator_fs_enoent_error_names.c  validator_pipe_socketpair_stream.c  validator_port_lock_safe_token_sanitized.sh  validator_random_sync_async.c  validator_tcp_loopback_echo.c  validator_threadpool_queue_work.c  validator_timer_ordering_close.c  validator_udp_loopback_send_recv.c
safe/tests/upstream/: CMakeLists.txt  README.md  patches-applied.md
safe/tools/: build_deb.sh  build_upstream_harness.sh  cc-linker.sh  relink_original_tests.sh  run_regressions.sh  run_upstream_tests.sh  stage_install.sh  update_bindings.sh  verify_sizes.sh  write_validator_port_lock.py
scripts/: build-debs.sh  install-build-deps.sh
